# fast-api-lms

./: .gitignore  alembic.ini  main.py  pyproject.toml
alembic/data/: students.json
alembic/versions/: b3396d8a1710_.py  c62d9c43c1b3_.py  e21cb123e824_.py
api/: courses.py  users.py
api/utils/: courses.py
db/: db_setup.py
db/models/: course.py  user.py
pydantic_schemas/: user.py
