[tool.poetry]
name = "fastapi-lms"
version = "0.1.0"
description = ""
authors = ["Shounak Dey <shounakdey@ymail.com>"]
readme = "README.md"
packages = [{include = "fastapi_lms"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pydantic = "^2.4.2"
sqlalchemy = "^2.0.22"
psycopg2-binary = "^2.9.9"
sqlalchemy-utils = "^0.41.1"
alembic = "^1.12.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
